--- a/src/styles/FashionWeek.css
+++ b/src/styles/FashionWeek.css
@@ -186,6 +186,7 @@ iframe {
   align-items: center;
   flex-direction: column;
   padding: 50px;
+  height: 20vw;
 }
 
 .container {
